<resources>
    <string name="app_name">Zovent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_">User name<font color="#FD4141">*</font></string>
    <string name="password_">Password<font color="#FD4141">*</font></string>
    <string name="haven_t_account_register_now">Haven’t account? Register now</string>
    <string name="haven_t_account">Haven’t account?</string>
    <string name="register_now">Register now</string>
    <string name="welcome_back_to_zovent">Welcome back to Zovent</string>
    <string name="zovent">Zovent</string>
    <string name="didn_t_receive_code_resend_again">Didn’t receive code? Resend again</string>
    <string name="didn_t_receive_code">Didn’t receive code?</string>
    <string name="resend_again">" Resend again"</string>
    <string name="email_">Email<font color="#FD4141">*</font></string>
    <string name="mobile_number_">Mobile number<font color="#FD4141">*</font></string>
    <string name="business_name_">Business name<font color="#FD4141">*</font></string>
    <string name="business_type_">Business type<font color="#FD4141">*</font></string>
    <string name="gst_registration_">GST Registration<font color="#FD4141">*</font></string>
    <string name="area_pincode_">Area pincode<font color="#FD4141">*</font></string>
    <string name="district_name_">District name<font color="#FD4141">*</font></string>
    <string name="gst_registration">GST Registration</string>
    <string name="optional">(optional)</string>
    <string name="food_licence">Food Licence</string>
    <string name="food_licence_">Food Licence<font color="#FD4141">*</font></string>
    <string name="drug_licence">Drug Licence</string>
    <string name="drug_licence_">Drug Licence<font color="#FD4141">*</font></string>
    <string name="choose_file">Choose File</string>
    <string name="resend_in">Resend in</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="seconds">seconds</string>

</resources>