<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.zovent.ui.main.view_model.SigninViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/backButton"
            android:onClick="@{viewModel::onClick}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_button_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ScrollView
            android:layout_marginTop="13dp"
            app:layout_constraintBottom_toTopOf="@id/goToSignup"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                tools:context=".ui.signup.fragment.SigninFragment">

                <!-- Logo -->

                <!-- Welcome Text -->
                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="Welcome back to Zovent"
                    android:textSize="20sp"
                    android:textColor="@color/blue_0775EB"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintTop_toBottomOf="@id/backButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="Sign up to your account"
                    android:textSize="12sp"
                    android:textColor="@color/gray_B8B8B8"
                    android:fontFamily="@font/poppins_regular"
                    app:layout_constraintTop_toBottomOf="@id/backButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- Email Label -->
                <TextView
                    android:id="@+id/userNameLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/user_name_" />

                <EditText
                    android:id="@+id/userNameInput"
                    style="@style/AppEditText"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />

                <TextView
                    android:id="@+id/emailLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/email_" />

                <EditText
                    android:id="@+id/emailInput"
                    style="@style/AppEditText"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.email}"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />

                <!-- Password Label -->
                <TextView
                    android:id="@+id/passwordLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/password_" />
                <!-- Password Layout -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/background_login_edittext">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        style="@style/AppEditText"
                        android:text="@={viewModel.password}"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/password_toggle" />

                    <ImageView
                        android:id="@+id/password_toggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/close_eye"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/mobileNumberLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/mobile_number_" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/countryCodeInput"
                        style="@style/AppEditText"
                        android:inputType="number"
                        android:text="+91"
                        android:imeOptions="actionNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="16dp" />
                    <EditText
                        app:layout_constraintStart_toEndOf="@id/countryCodeInput"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/mobileNumberInput"
                        style="@style/AppEditText"
                        android:inputType="number"
                        android:text="@={viewModel.email}"
                        android:imeOptions="actionNext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/businessNameLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/business_name_" />

                <EditText
                    android:id="@+id/businessNameInput"
                    style="@style/AppEditText"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />
                <TextView
                    android:id="@+id/businessTypeLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/business_type_" />
                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:includeFontPadding="false"
                        android:gravity="center_vertical"
                        android:id="@+id/retail"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/unselected_button"
                        android:drawablePadding="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Retail"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="16sp"/>
                    <TextView
                        android:includeFontPadding="false"
                        android:gravity="center_vertical"
                        android:id="@+id/distributor"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/unselected_button"
                        android:drawablePadding="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Distributor"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="16sp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/gstRegistrationOptionalLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="GST Registration" />
                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:includeFontPadding="false"
                        android:gravity="center_vertical"
                        android:id="@+id/yesGstRegistration"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/unselected_button"
                        android:drawablePadding="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yes"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="16sp"/>
                    <TextView
                        android:includeFontPadding="false"
                        android:gravity="center_vertical"
                        android:id="@+id/noGstRegistration"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/unselected_button"
                        android:drawablePadding="6dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No"
                        android:textColor="@color/black"
                        android:fontFamily="@font/poppins_light"
                        android:textSize="16sp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/gstRegistrationLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/gst_registration_" />

                <EditText
                    android:id="@+id/gstRegistrationInput"
                    style="@style/AppEditText"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />
                <TextView
                    android:id="@+id/areaPincodeLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/area_pincode_" />

                <EditText
                    android:id="@+id/areaPincodeInput"
                    style="@style/AppEditText"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />
                <TextView
                    android:id="@+id/districtNameLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/district_name_" />

                <EditText
                    android:id="@+id/districtNameInput"
                    style="@style/AppEditText"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />
                <TextView
                    android:id="@+id/companyLogoLabel"
                    style="@style/AppTextLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:text="Company logo" />
                <TextView
                    android:id="@+id/chooseFile"
                    android:background="@drawable/background_login_edittext"
                    android:text="Choose File"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="16dp" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    style="@style/AppButtonStyle"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="32dp"
                    android:onClick="@{viewModel::onClick}"
                    android:text="Sign Up" />


            </LinearLayout>

        </ScrollView>
        <TextView
            android:id="@+id/goToSignup"
            android:layout_marginBottom="15dp"
            android:paddingTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black_323434"
            android:text="Already have an account? Login"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>